Fix overflow of third container

--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .third-cont .quote {
